Add user activation with token
